- Fixed bug #48557 (Numeric string keys in Apache Hashmaps are not cast to integers) patch by David ZÃ¼lke <david.zuelke at bitextender.com>

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@282176 c90b9560-bf6c-de11-be94-00142212c4b1